fix: footer width change
as raised in portfolio review, users are seeing a horizontal scrollbar for which removed footer width

--- a/styles.css
+++ b/styles.css
@@ -107,9 +107,8 @@ label{
 
 
 .footer {
-    width: 100vw;
+ 
     margin-top: 1rem;
-    
     color: var(--primary-text);
     background-color: var(--off-white);
     padding: 0rem 0.5rem 1rem 0.5rem;
